force-app/main/default/objects/Account_Request__c/Account_Request__c.object-meta.xml
<CustomObject>
    <description>Created in accordance with SIP Exception</description>
    <label>Account Request</label>
    <nameField>
        <displayFormat>REQ - {00000}</displayFormat>
        <label>Account Request Name</label>
        <type>AutoNumber</type>
    </nameField>
    <pluralLabel>Account Requests</pluralLabel>
    <sharingModel>Private</sharingModel>
</CustomObject>