force-app/main/default/objects/Account_Request__c/fields/Approval_Status__c.field-meta.xml
<CustomField>
    <fullName>Approval_Status__c</fullName>
    <label>Approval Status</label>
    <type>Picklist</type>
    <valueSet>
        <restricted>true</restricted>
        <valueSetDefinition>
            <value>
                <fullName>Approved - NAM /SNAM</fullName>
            </value>
            <value>
                <fullName>Approved - SIP Committee</fullName>
            </value>
            <value>
                <fullName>Approved - Head of</fullName>
            </value>
            <value>
                <fullName>Rejected</fullName>
            </value>
        </valueSetDefinition>
    </valueSet>
</CustomField>