force-app/main/default/objects/Account_Request__c/fields/Number_of_Accounts_impacted__c.field-meta.xml
<CustomField>
    <fullName>Number_of_Accounts_impacted__c</fullName>
    <label>Number of Accounts impacted?</label>
    <precision>18</precision>
    <scale>0</scale>
    <type>Number</type>
</CustomField>