force-app/main/default/objects/Account_Request__c/fields/Status__c.field-meta.xml
<CustomField>
    <fullName>Status__c</fullName>
    <label>Status</label>
    <type>Picklist</type>
    <valueSet>
        <valueSetDefinition>
            <value>
                <fullName>New</fullName>
                <default>true</default>
                <label>New</label>
            </value>
            <value>
                <fullName>Assigned to Sales Performance</fullName>
            </value>
            <value>
                <fullName>Assign to Agency Partnerships Team</fullName>
            </value>
            <value>
                <fullName>In Approval</fullName>
            </value>
            <value>
                <fullName>Processing - Sales Performance</fullName>
            </value>
            <value>
                <fullName>Closed - Completed</fullName>
            </value>
            <value>
                <fullName>Closed - Rejected</fullName>
            </value>
        </valueSetDefinition>
    </valueSet>
</CustomField>