force-app/main/default/objects/Account_Request__c/fields/Type__c.field-meta.xml
<CustomField>
    <fullName>Type__c</fullName>
    <description>Custom Type field created as part of SIP Exception for the Account Request Object</description>
    <label>Type</label>
    <type>Picklist</type>
    <valueSet>
        <controllingField>Business_Type__c</controllingField>
        <restricted>true</restricted>
        <valueSetDefinition>
            <value>
                <fullName>Account movement</fullName>
            </value>
            <value>
                <fullName>Acquisitions</fullName>
            </value>
            <value>
                <fullName>AP Baseline Adjustment - Agency</fullName>
            </value>
            <value>
                <fullName>AP Baseline Adjustments - Corporate</fullName>
            </value>
            <value>
                <fullName>Capacity settings</fullName>
            </value>
            <value>
                <fullName>Change in Customer buying behavior</fullName>
            </value>
            <value>
                <fullName>Changes to methodology</fullName>
            </value>
            <value>
                <fullName>Contract Customer moved to New Business</fullName>
            </value>
            <value>
                <fullName>DRA not signed</fullName>
            </value>
            <value>
                <fullName>Lack of fleet availability</fullName>
            </value>
            <value>
                <fullName>New Business account + 12 months</fullName>
            </value>
            <value>
                <fullName>No contracts</fullName>
            </value>
            <value>
                <fullName>Onboarding delays</fullName>
            </value>
            <value>
                <fullName>Reversal of performance trend</fullName>
            </value>
            <value>
                <fullName>Other</fullName>
            </value>
        </valueSetDefinition>
    </valueSet>
</CustomField>