force-app/main/default/objects/Account_Request__c/recordTypes/SIP_Exception.recordType-meta.xml
<RecordType>
    <fullName>SIP_Exception</fullName>
    <active>true</active>
    <description>Record Type created for SIP Exception which is default for QL_Qantas_Sales</description>
    <label>SIP Exception</label>
</RecordType>