force-app/main/default/objects/Account_Request__c/listViews/Agency_Exception.listView-meta.xml
<ListView>
    <fullName>Agency_Exception</fullName>
    <columns>NAME</columns>
    <columns>Account_Name__c</columns>
    <columns>CREATEDBY_USER</columns>
    <columns>Status__c</columns>
    <filterScope>Everything</filterScope>
    <filters>
        <field>Business_Type__c</field>
        <operation>equals</operation>
        <value>Agency</value>
    </filters>
    <filters>
        <field>Status__c</field>
        <operation>equals</operation>
        <value>Assign to Agency Partnerships Team</value>
    </filters>
    <label>Agency Exception</label>
</ListView>