force-app/main/default/objects/Account_Request__c/listViews/All_SIP_Exception.listView-meta.xml
<ListView>
    <fullName>All_SIP_Exception</fullName>
    <columns>NAME</columns>
    <columns>Account_Name__c</columns>
    <columns>Approval_Status__c</columns>
    <filterScope>Everything</filterScope>
    <label>All SIP Exception</label>
    <sharedTo>
        <roleAndSubordinatesInternal>QF_DOM_Sales</roleAndSubordinatesInternal>
    </sharedTo>
</ListView>