force-app/main/default/objects/Account_Request__c/listViews/Head_of_Sales_Account_Request.listView-meta.xml
<ListView>
    <fullName>Head_of_Sales_Account_Request</fullName>
    <columns>NAME</columns>
    <columns>Account_Name__c</columns>
    <columns>AccountManager__c</columns>
    <columns>Approval_Status__c</columns>
    <columns>Status__c</columns>
    <filterScope>Queue</filterScope>
    <label>Head of Sales</label>
    <queue>Head_of_Sales</queue>
    <sharedTo>
        <allInternalUsers></allInternalUsers>
    </sharedTo>
</ListView>