force-app/main/default/objects/Account_Request__c/listViews/SIP_Committee_Head_of_S_D_Account_Request.listView-meta.xml
<ListView>
    <fullName>SIP_Committee_Head_of_S_D_Account_Request</fullName>
    <filterScope>Queue</filterScope>
    <label>SIP Committee (Head of S&amp;D)</label>
    <queue>SIP_Committee_Head_of_S_D</queue>
    <sharedTo>
        <allInternalUsers></allInternalUsers>
    </sharedTo>
</ListView>